public abstract class Vehicle {
    public abstract void start();
    public abstract void accelerate();
    public abstract void stop();

}
